# example-airflow-plugin-as-package

./: .gitignore  pyproject.toml
example_airflow_plugin_as_package/: plugin_entry.py
example_airflow_plugin_as_package/blueprint/: __init__.py
example_airflow_plugin_as_package/blueprint/api/: __init__.py  v0.py
example_airflow_plugin_as_package/blueprint/fab/: __init__.py
tests/: test_example_airflow_plugin_as_package.py
